<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/paddingLeft"
    android:paddingTop="@dimen/paddingTop"
    android:paddingRight="@dimen/paddingRight"
    android:paddingBottom="@dimen/paddingBottom"
    android:weightSum="10"
    tools:context=".MainActivity">
    <!-- Felhasználónév és a dátum-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:hint="@string/tvname"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:gravity="end" />

    </LinearLayout>

    <!-- A nap státuszának jelölő négyzetei 1. sor (munknanap, pihenőnap, fizetettszabadság)-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/MN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/mn" />

        <CheckBox
            android:id="@+id/PN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/pn" />

        <CheckBox
            android:id="@+id/FSZ"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/fsz" />
    </LinearLayout>

    <!-- A nap státuszának jelölő négyzetei 2. sor-(kétszeres szorzó, háromszoros szorzó, betegszabadság-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/_2x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/_2x" />

        <CheckBox
            android:id="@+id/_3x"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/_3x" />

        <CheckBox
            android:id="@+id/TP"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:text="@string/bsz" />
    </LinearLayout>

    <!-- Munka kezdete-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="394dp">

        <LinearLayout
            android:id="@+id/layoutContainer_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <DigitalClock
            android:id="@+id/etStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:enabled="false" />

        <Button
            android:id="@+id/btnStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="@string/start" />
    </LinearLayout>
    <!--Munka vége-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1.5"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="452dp">

        <LinearLayout
            android:id="@+id/layoutContainer_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"></LinearLayout>

        <DigitalClock
            android:id="@+id/etStopTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="8"
            android:enabled="false" />-->

        <Button
            android:id="@+id/btnStop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center"
            android:enabled="false"
            android:text="@string/stop" />

    </LinearLayout>


    <!-- A nap végén itt írja ki a ledolgozott időt, az elszámolt időt (ami lehet több és kevesebb a nap
         státuszától függ) és a munkaidőből hátralévő napok számát. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="start|center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvWorkTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/workTime" />

        <LinearLayout
            android:id="@+id/layoutContainer"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:orientation="horizontal">
            <!--android:gravity="center"-->

            <!--<TextView/>
              android:id="@+id/workTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="time" />-->
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvChargedTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/chargedTime" />

        <LinearLayout
            android:id="@+id/layoutContainer_charged"
            android:layout_width="match_parent"
            android:layout_height="25sp"
            android:orientation="horizontal">
            <!--<TextView
                android:id="@+id/chargedTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10" />-->
        </LinearLayout>
    </LinearLayout>

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0sp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvTimeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="@string/timeLeft" />

        <TextView
            android:id="@+id/timeLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10" />
    </LinearLayout> -->

    <Button
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:visibility="gone" />


</LinearLayout>